# oxide-sentinel

./: .gitignore  README.md
collectors/system_info/: Cargo.toml
collectors/system_info/src/: main.rs
control/: main.py  orchestrator.py  scoring.py
shared/schemas/: telemetry.schema.json
